<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="10dp"
    android:gravity="center"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="4dp"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:id="@+id/friendImgView"
                android:layout_width="match_parent"
                android:layout_height="400dp"
                android:layout_margin="2dp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/ic_launcher_background" />

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:horizontalSpacing="2dp"
                android:stretchColumns="*"
                tools:visibility="visible">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="6dp"
                    android:layout_marginBottom="3dp"
                    android:weightSum="4">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="1"
                        android:paddingStart="4dp"
                        android:text="@string/name"
                        android:textAlignment="textStart"
                        android:textSize="14sp"
                        tools:ignore="RtlCompat,RtlSymmetry" />

                    <TextView
                        android:id="@+id/nameDiaTV"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"
                        android:text="@string/friends_name"
                        android:textColor="@color/black"
                        android:textStyle="bold"
                        android:textAlignment="textStart"
                        android:textSize="16sp" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="3dp"
                    android:layout_marginBottom="3dp"
                    android:weightSum="4">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:paddingStart="4dp"
                        android:text="@string/address"
                        android:textAlignment="textStart"
                        android:textSize="14sp"
                        tools:ignore="RtlSymmetry" />

                    <TextView
                        android:id="@+id/addressDiaTV"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"
                        android:text="@string/friends_address"
                        android:textAlignment="textStart"
                        android:textSize="14sp" />
                </TableRow>


                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="3dp"
                    android:layout_marginBottom="3dp"
                    android:weightSum="4">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:paddingStart="4dp"
                        android:text="@string/email"
                        android:textAlignment="textStart"
                        android:textSize="14sp"
                        tools:ignore="RtlSymmetry" />

                    <TextView
                        android:id="@+id/emailDiaTV"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"
                        android:text="@string/friends_email"
                        android:textAlignment="textStart"
                        android:textSize="14sp" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="3dp"
                    android:layout_marginBottom="3dp"
                    android:weightSum="4">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:paddingStart="4dp"
                        android:text="@string/phone"
                        android:textAlignment="textStart"
                        android:textSize="14sp"
                        tools:ignore="RtlSymmetry" />

                    <TextView
                        android:id="@+id/phoneDiaTV"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"
                        android:text="@string/friends_phone"
                        android:textAlignment="textStart"
                        android:textSize="14sp" />
                </TableRow>
            </TableLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
